syncroot/base/verification/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verification
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: verification
  template:
    metadata:
      labels:
        app.kubernetes.io/name: verification
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      containers:
        - name: verification
          image: verification:1
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
