syncroot/base/verification/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: verification
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
